commit dece7f0fce421044faa9ebd4428bfb8569236653
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Mar 18 01:58:29 2010 +0900

    aufs: tiny, replace au_getname() by __getname_gfp(GFP_NOFS)
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 6e5402c2c13be314963b65722e4a0bd2fd8f0bc9
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Wed Mar 17 16:31:12 2010 +0900

    aufs: possible bugfix, replace __getname() by au_getname()
    
    GFP_KENEL in __getname() macro may cause a deadlock. Replace it by
    GFP_NOFS by a new macro au_getname().
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit cded842851a8a85fe02dc13278fc2bef23c243bf
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Mar 15 20:33:54 2010 +0900

    aufs: remove au_fsync_br(), uneport fsync_super()
    
    Because it is not so useful feature as expcted.
    Additionally it may introduce a lock problem in the future.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 79e935088d11d915ffeb4b0ff27b6ae68609f5ec
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Mar 15 19:54:08 2010 +0900

    aufs: remove au_fsync_br()
    
    Because it is not so useful feature as expcted.
    Additionally it may introduce a lock problem in the future.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit dacdbec082028cc66b5331b7967be2d1e31a7c4a
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Mon Mar 15 16:49:33 2010 +0900

    aufs: tiny, make au_sbi_ops const
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 00f3b21cd43796db130da7d3cd1a2e001cf7cae8
Author: J. R. Okajima <hooanon05@yahoo.co.jp>
Date:   Thu Mar 11 18:46:24 2010 +0900

    aufs: tiny, comment for making au_sbi_ops const
    
    Let's wait until linux/include/kobject.h declear it.
    
    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

commit 7172ca48bc5c49485b16cb6f76bfa11ee56fa3d8
Author: J. R. Okajima <hooanon05@yahoo.co.jp>